--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,8 +1,11 @@
 @charset "utf-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Architects+Daughter&display=swap');
+/*font-family: 'Amiri', serif;
+font-family: 'Architects Daughter', cursive;*/
 *{
     margin: 0px;
     padding: 0px;
+    font-family: 'Amiri', serif;
 }
 
 html, body{
@@ -18,7 +21,10 @@ header {
 
 header > h1{
     padding: 50px 0px 0px 0px;
+    font-family: 'Architectes Daughter', cursive;
     font-variant: small-caps;
+    font-weight: normal;
+    font-size: 6vw;
 }
 
 header>p{
@@ -34,6 +40,8 @@ header a:hover, footer a:hover{
     background-color: rgba(31, 31, 31, 0.904);
 }
 
+
+
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
@@ -41,20 +49,47 @@ section{
     padding-left: 40px;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
 
 section.normal{
     background-color: white;
     color: black;
+    font-size: 3vw;
+    border: 0px solid transparent;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.821);
 }
 
 section.image{
-    background-color: rgb(58, 58, 58);
+    background-color: rgba(58, 58, 58, 0.356);
     color: white;
+    font-size: 3vw;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-attachment: fixed;
+    
 }
 section.image > p {
-    background-color: black;
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.329);
     width: 500px;
+    text-shadow: 2px 2px 0px black;
 }
+
+section#img01{
+    background-image: url(../imagem/sunshine-boy.jpeg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+section#img02{
+    background-image: url(../imagem/sunshine-rock.jpeg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
 
 footer{
     background-color: black;
